# ffmpeg_wrapper

./: CMakeLists.txt  main.c
lib/: build_ffmpeg.sh
lib/linux_x86_64/: libavdevice.so.61  libavfilter.so.10  libavformat.so.61  libavutil.so.59  libswresample.so.5  libswscale.so.8
lib/macosx_arm64/: libavdevice.61.dylib  libavfilter.10.dylib  libavformat.61.dylib  libavutil.59.dylib  libswresample.5.dylib  libswscale.8.dylib
src/: av_decoder.c  av_decoder.h  av_device_input.c  av_device_input.h  av_encoder.c  av_encoder.h  av_filter.c  av_filter.h  av_output.c  av_output.h  av_util.h
